# lib

./: .gitignore  Cargo.toml  README.md  a.sh  go.mod  go.sum  install.go  install_lib_unix.go  install_lib_windows.go  kclvm_bin.go  kclvm_bin_unix.go  kclvm_bin_windows.go  kclvm_cli_shared_lib_darwin_amd64.go  kclvm_cli_shared_lib_darwin_arm64.go  kclvm_cli_shared_lib_linux_amd64.go  kclvm_cli_shared_lib_linux_arm64.go  kclvm_cli_shared_lib_windows_amd64.go  kclvm_cli_shared_lib_windows_arm64.go  spec.pb.go  util.go  util_unix.go  util_windows.go
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  mvn-settings.xml
c/: .gitignore  Cargo.toml  Makefile  README.md  (+2 more)
cpp/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
cpp/examples/: exec_api.cpp  exec_with_deps_api.cpp  format_code_api.cpp  format_path_api.cpp  get_schema_type_api.cpp  get_version_api.cpp  lint_path_api.cpp  list_options_api.cpp  list_variables_api.cpp  load_package_api.cpp  load_settings_files_api.cpp  override_api.cpp  parse_file_api.cpp  parse_program_api.cpp  rename_api.cpp  rename_code_api.cpp  testing_api.cpp  update_deps_api.cpp  validate_api.cpp
cpp/include/: kcl_lib.hpp
cpp/scripts/: run_examples.sh
cpp/src/: lib.rs
cpp/src/api/: spec.pb.cc  spec.pb.h
java/: Cargo.toml  Makefile  README.md  pom.xml
java/scripts/: build.py
java/src/: lib.rs
java/src/main/java/com/kcl/api/: API.java  Environment.java  Service.java  Spec.java
java/src/main/java/com/kcl/ast/: AnyType.java  Arguments.java  AssertStmt.java  AssignStmt.java  AstIndex.java  AugAssignStmt.java  AugBinOrAugOp.java  AugOp.java  BasicType.java  BinBinOrAugOp.java  BinBinOrCmpOp.java  BinOp.java  BinOrAugOp.java  BinOrCmpOp.java  BinaryExpr.java  BoolLiteralType.java  CallExpr.java  CheckExpr.java  CmpBinOrCmpOp.java  CmpOp.java  Comment.java  CompClause.java  Compare.java  ConfigEntry.java  ConfigEntryOperation.java  ConfigExpr.java  ConfigIfEntryExpr.java  Decorator.java  DictComp.java  DictType.java  Expr.java  ExprContext.java  ExprStmt.java  FloatLiteralType.java  FloatNumberLitValue.java  FormattedValue.java  FunctionType.java  Identifier.java  IdentifierExpr.java  IfExpr.java  (+52 more)
java/src/main/java/com/kcl/loader/: ScopeKind.java  ScopeRef.java  SymbolKind.java  SymbolRef.java
java/src/main/java/com/kcl/plugin/: Plugin.java  PluginContext.java
java/src/main/java/com/kcl/util/: JsonUtil.java  SematicUtil.java
java/src/test/java/com/kcl/: ExecProgramTest.java  FormatTest.java  GetSchemaTypeTest.java  GetVersionTest.java  LintTest.java  ListOptionsTest.java  ListVariablesTest.java  LoadPackageTest.java  LoadSettingsFileTest.java  LoadSettingsFilesTest.java  OverrideFileTest.java  ParseFileTest.java  ParseProgramTest.java  ParseTest.java  PluginTest.java  RenameTest.java  TestingTest.java  UpdateDependenciesTest.java  ValidateTest.java
java/src/test_data/: schema.k
java/src/test_data/lint_path/: test-lint.k
java/src/test_data/list_merged_variables/: base.k
java/src/test_data/list_merged_variables/merge_0/: main.k
java/src/test_data/list_variables/: list.k  main.k
java/src/test_data/parse/: main.k
kotlin/: Cargo.toml  Makefile  README.md  pom.xml
kotlin/src/main/java/com/kcl/api/: API.java  Service.java  Spec.java
kotlin/src/main/java/com/kcl/plugin/: MethodFunction.java
kotlin/src/main/kotlin/com/kcl/api/: ArgumentKt.kt  BuildProgramArgsKt.kt  BuildProgramResultKt.kt  BuildProgram_ArgsKt.kt  BuildProgram_ResultKt.kt  CliConfigKt.kt  DecoratorKt.kt  ErrorKt.kt  ExampleKt.kt  ExecArtifactArgsKt.kt  ExecArtifact_ArgsKt.kt  ExecProgramArgsKt.kt  ExecProgramResultKt.kt  ExecProgram_ArgsKt.kt  ExecProgram_ResultKt.kt  ExternalPkgKt.kt  FormatCodeArgsKt.kt  FormatCodeResultKt.kt  FormatCode_ArgsKt.kt  FormatCode_ResultKt.kt  FormatPathArgsKt.kt  FormatPathResultKt.kt  FormatPath_ArgsKt.kt  FormatPath_ResultKt.kt  FunctionTypeKt.kt  GetSchemaTypeMappingArgsKt.kt  GetSchemaTypeMappingResultKt.kt  GetSchemaTypeMappingUnderPathResultKt.kt  GetSchemaTypeMappingUnderPath_ResultKt.kt  GetSchemaTypeMapping_ArgsKt.kt  GetSchemaTypeMapping_ResultKt.kt  GetVersionArgsKt.kt  GetVersionResultKt.kt  GetVersion_ArgsKt.kt  GetVersion_ResultKt.kt  IndexSignatureKt.kt  KclTypeKt.kt  KeyValuePairKt.kt  LintPathArgsKt.kt  LintPathResultKt.kt  (+77 more)
kotlin/src/test/kotlin/com/kcl/: ExexProgramTest.kt  FormatTest.kt  GetSchemaTypeTest.kt  GetVersionTest.kt  LintTest.kt  ListOptionsTest.kt  ListVariablesTest.kt  LoadPackageTest.kt  LoadSettingsFilesTest.kt  OverrideFileTest.kt  ParseFileTest.kt  ParseProgramTest.kt  RenameTest.kt  TestingTest.kt  UpdateDependenciesTest.kt  ValidateTest.kt
lua/: Cargo.toml  Makefile  README.md  kcl_lib-0.10.0-1.rockspec  kcl_lib-0.10.2-1.rockspec  kcl_lib-0.10.5-1.rockspec  kcl_lib-0.10.6-1.rockspec  kcl_lib-0.10.7-1.rockspec  kcl_lib-0.10.8-1.rockspec  kcl_lib-0.11.0-1.rockspec  kcl_lib-0.11.2-1.rockspec  kcl_lib-0.12.0-1.rockspec  kcl_lib-0.12.1-1.rockspec  kcl_lib-0.12.2-1.rockspec  kcl_lib-0.12.3-1.rockspec
lua/hack/: generate_pb.lua
lua/kcl_lib/: api.lua  raw_api.lua  schema.lua  types.lua
lua/spec/: exec_spec.lua  kcl_lib_api_spec.lua  kcl_lib_raw_api_spec.lua  kcl_lib_spec.lua
lua/spec/test_data/: data.k  lint_err.k
lua/spec/test_data/test/: hello.k  hello_test.k
lua/src/: client.rs  lib.rs
lua/test/: exec_test.lua
python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  setup.py
python/kcl_lib/: __init__.py
python/kcl_lib/api/: __init__.py  service.py  spec_pb2.py  spec_pb2.pyi
python/kcl_lib/bootstrap/: __init__.py  artifact.py
python/kcl_lib/plugin/: __init__.py  plugin.py
python/kcl_py/api/: __init__.py  gpyrpc_pb2.py  service.py
python/kcl_py_lib/api/: __init__.py  service.py  spec_pb2.py
python/kcl_py_lib/bootstrap/: __init__.py  artifact.py
python/scripts/: requirements.txt
python/src/: lib.rs
python/tests/: api_test.py  exec_test.py  parse_test.py  plugin_test.py
python/tests/test_data/: plugin.k
python/tests/test_data/override_file/: main.bak  main.k
python/tests/test_data/rename/: main.k
(+238 files in other folders)
