[package]
name = "kcl-lang"
version = "0.10.0-beta.1"
edition = "2021"
readme = "README.md"
documentation = "kcl-lang.io"
description = "KCL Rust SDK"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kclvm-api = { git = "https://github.com/kcl-lang/kcl", version = "0.10.0-beta.1" }
