[package]
name = "kcl-lang"
version = "0.10.7"
edition = "2021"
readme = "README.md"
documentation = "kcl-lang.io"
description = "KCL Rust SDK"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kclvm-api = { git = "https://github.com/kcl-lang/kcl", version = "0.10.7" }
kclvm-evaluator = { git = "https://github.com/kcl-lang/kcl", version = "0.10.7" }
kclvm-loader = { git = "https://github.com/kcl-lang/kcl", version = "0.10.7" }
kclvm-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.10.7" }
kclvm-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.10.7" }
