[package]
name = "kcl-lang"
version = "0.12.1"
edition = "2024"
readme = "README.md"
documentation = "kcl-lang.io"
description = "KCL Rust SDK"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kcl-api = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-evaluator = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-loader = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-primitives = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
