[package]
name = "kcl-lib-jni"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
jni = "0.21.1"
prost = "0.11.8"
prost-types = "0.11.8"
serde_json = "1"
indexmap = "2.2.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
kcl-lang = {path = "../"}
once_cell = "1.19.0"
lazy_static = "1.4.0"

kclvm-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.8.4" }
kclvm-sema = { git = "https://github.com/kcl-lang/kcl", version = "0.8.4" }
kclvm-api = { git = "https://github.com/kcl-lang/kcl", version = "0.8.4" }
