[package]
name = "kcl-lib-jni"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
jni = "0.21.1"
prost = "0.11.8"
prost-types = "0.11.8"
serde_json = "1"
indexmap = "2.2.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
lazy_static = "1.4.0"

kclvm-parser = { git = "https://github.com/kcl-lang/kcl", rev = "2aa8fea", version = "0.10.8" }
kclvm-sema = { git = "https://github.com/kcl-lang/kcl", rev = "2aa8fea", version = "0.10.8" }
kclvm-api = { git = "https://github.com/kcl-lang/kcl", rev = "2aa8fea", version = "0.10.8" }
