[package]
name = "kcl-lib-jni"
publish = false
version = "0.12.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
jni = "0.21.1"
serde_json = "1"
indexmap = "2.2.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"
lazy_static = "1.4.0"
prost = "0.14.1"
prost-types = "0.14.1"

kcl-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-sema = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
kcl-api = { git = "https://github.com/kcl-lang/kcl", version = "0.12.1" }
