[package]
name = "kcl-lib-lua"
version = "0.12.3"
edition = "2024"
publish = false

[features]
lua51 = ["mlua", "mlua/lua51"]
lua52 = ["mlua", "mlua/lua52"]
lua53 = ["mlua", "mlua/lua53"]
lua54 = ["mlua", "mlua/lua54"]
luajit = ["mlua", "mlua/luajit"]
luajit52 = ["mlua", "mlua/luajit52"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9", features = [
  "module",
  "macros",
], default-features = false, optional = true }
kcl-api = { git = "https://github.com/kcl-lang/kcl", version = "0.12.3" }
