[package]
name = "kcl-python-lib"
version = "0.10.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
kclvm-api = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
pyo3 = "0.20.1"
