[package]
name = "kcl-python-lib"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
kcl-api = { git = "https://github.com/kcl-lang/kcl", version = "0.12.0" }
# fix the pyos version to 0.20.1
# because https://github.com/PyO3/maturin/issues/1960
pyo3 = "=0.20.2"
