[project]
name = "kcl_py"
version = "0.7.2"
description = "KCL Artifact Library for Python"
authors = [
    { name="KCL Authors", email="" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "protobuf >=3.19.4, <4.0.0"
]
requires-python = ">=3.7"
readme = "README.md"

[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"
